syntax = "proto3";
package musechain.musecore.observer;

import "gogoproto/gogo.proto";
import "musechain/musecore/pkg/crypto/crypto.proto";

option go_package = "github.com/RWAs-labs/muse/x/observer/types";

enum NodeStatus {
  option (gogoproto.goproto_enum_stringer) = true;
  Unknown = 0;
  Whitelisted = 1;
  Standby = 2;
  Ready = 3;
  Active = 4;
  Disabled = 5;
}

message NodeAccount {
  string operator = 1;
  string granteeAddress = 2;
  pkg.crypto.PubKeySet granteePubkey = 3;
  NodeStatus nodeStatus = 4;
}
