syntax = "proto3";
package musechain.musecore.pkg.crypto;

import "gogoproto/gogo.proto";

option go_package = "github.com/RWAs-labs/muse/pkg/crypto";

// PubKeySet contains two pub keys , secp256k1 and ed25519
message PubKeySet {
  string secp256k1 = 1
      [ (gogoproto.casttype) = "PubKey", (gogoproto.customname) = "Secp256k1" ];
  string ed25519 = 2 [ (gogoproto.casttype) = "PubKey" ];
}
